<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/guidelinesScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    android:fillViewport="true"
    tools:context=".GuidelinesFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_to_allergen_detector"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/welcomeMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeMessage" />

    <TextView
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogo"
        android:layout_marginTop="30dp"
        android:text="@string/guideline_1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appLogo" />

    <ImageView
        android:id="@+id/arrow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/guideline1"
        android:layout_marginTop="10dp"
        android:src="@drawable/baseline_arrow_downward_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <TextView
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/arrow1"
        android:layout_marginTop="20dp"
        android:text="@string/guideline_2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrow1" />

    <ImageView
        android:id="@+id/arrow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/guideline2"
        android:layout_marginTop="10dp"
        android:src="@drawable/baseline_arrow_downward_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <TextView
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/arrow2"
        android:layout_marginTop="20dp"
        android:text="@string/guideline_3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrow2" />

    <ImageView
        android:id="@+id/arrowToButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/guideline3"
        android:layout_marginTop="20dp"
        android:src="@drawable/baseline_arrow_downward_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <Button
        android:id="@+id/staySafeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/arrowToButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/stay_safe_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrowToButton" />

    <TextView
        android:id="@+id/number3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/staySafeButton"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:text="@string/_3"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/number2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staySafeButton" />

    <TextView
        android:id="@+id/number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/staySafeButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/_2"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/number1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number3"
        app:layout_constraintTop_toBottomOf="@id/staySafeButton" />

    <TextView
        android:id="@+id/number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/staySafeButton"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="28dp"
        android:text="@string/_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number2"
        app:layout_constraintTop_toBottomOf="@+id/staySafeButton" />

    <ImageView
        android:id="@+id/arrow3ToLists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/number3"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/baseline_arrow_downward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number3" />

    <ImageView
        android:id="@+id/arrow2ToLists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/number2"
        android:layout_marginBottom="16dp"
        android:src="@drawable/baseline_arrow_downward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/arrow1ToLists"
        app:layout_constraintStart_toEndOf="@id/arrow3ToLists"
        app:layout_constraintTop_toBottomOf="@id/number2" />

    <ImageView
        android:id="@+id/arrow1ToLists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/number1"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/baseline_arrow_downward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number1" />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>