...
    <item
        android:id="@+id/navigation_lists"
        android:icon="@drawable/baseline_view_list_24"
        android:title="@string/title_lists" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/baseline_photo_camera_24"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_profile_circle_24"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_guidelines"
        android:title="@string/guidelines_title" />

</menu>
