...
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/showHintButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corners"
        android:drawableTop="@drawable/baseline_question_mark_24"
        android:layout_marginTop="80dp"
        android:elevation="2dp"
...
